--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,45 @@
     </repository>
   </distributionManagement>
 
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.dkanejs.maven.plugins</groupId>
+            <artifactId>docker-compose-maven-plugin</artifactId>
+            <version>1.0.1</version>
+            <executions>
+              <execution>
+                <id>up</id>
+                <!--<phase>pre-integration-test</phase>-->
+                <phase>verify</phase>
+                <goals>
+                  <goal>up</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>down</id>
+                <!--<phase>post-integration-test</phase>-->
+                <phase>verify</phase>
+                <goals>
+                  <goal>down</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <composeFile>${project.basedir}/src/main/docker/docker-compose.yaml</composeFile>
+              <detachedMode>true</detachedMode>
+              <removeVolumes>true</removeVolumes>
+              <detail>true</detail>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <!-- tag::content[] -->
   <build>
     <!-- end::content[] -->
@@ -84,6 +123,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.0.3.RELEASE</version>
+        <configuration>
+          <executable>true</executable>
+        </configuration>
       </plugin>
 
       <plugin>
