--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,14 @@ env:
 language: java
 jdk: oraclejdk8
 
-apt:
-  update: true
-  packages:
-  - bash
-  - tree
-  - docker-ce
-  - python-pip
+addons:
+  apt:
+    update: true
+    packages:
+    - bash
+    - tree
+    - docker-ce
+    - python-pip
 
 install: true
 before_script:
