--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- tag::content[] -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="
-         http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <!-- end::content[] -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <!-- end::content[] -->
+
   <modelVersion>4.0.0</modelVersion>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-  </properties>
-
-  <groupId>daggerok</groupId>
+  <groupId>com.github.daggerok</groupId>
   <artifactId>frontend-maven-plugin-example</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.3.RELEASE</version>
-    <relativePath/>
-  </parent>
+  <properties>
+    <encoding>UTF-8</encoding>
+    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+
+    <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
+    <frontend-maven-plugin.npmVersion>6.11.3</frontend-maven-plugin.npmVersion>
+    <frontend-maven-plugin.nodeVersion>v12.10.0</frontend-maven-plugin.nodeVersion>
+
+    <java.version>1.8</java.version>
+    <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
+    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+    <asciidoctor-maven-plugin.version>2.0.0-RC.1</asciidoctor-maven-plugin.version>
+    <docker-compose-maven-plugin.version>2.5.1</docker-compose-maven-plugin.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>${spring-boot.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -82,23 +95,15 @@
           <plugin>
             <groupId>com.dkanejs.maven.plugins</groupId>
             <artifactId>docker-compose-maven-plugin</artifactId>
-            <version>1.0.1</version>
+            <version>${docker-compose-maven-plugin.version}</version>
             <executions>
               <execution>
                 <id>up</id>
-                <!--<phase>pre-integration-test</phase>-->
-                <phase>verify</phase>
-                <goals>
-                  <goal>up</goal>
-                </goals>
+                <goals><goal>up</goal></goals>
               </execution>
               <execution>
                 <id>down</id>
-                <!--<phase>post-integration-test</phase>-->
-                <phase>verify</phase>
-                <goals>
-                  <goal>down</goal>
-                </goals>
+                <goals><goal>down</goal></goals>
               </execution>
             </executions>
             <configuration>
@@ -122,16 +127,21 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>${spring-boot.version}</version>
         <configuration>
           <executable>true</executable>
         </configuration>
+        <executions>
+          <execution>
+            <goals><goal>repackage</goal></goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
-        <version>1.5.6</version>
+        <version>${asciidoctor-maven-plugin.version}</version>
         <executions>
           <execution>
             <id>output-html</id>
@@ -188,7 +198,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>${maven-clean-plugin.version}</version>
         <configuration>
           <filesets>
             <fileset>
@@ -202,19 +212,19 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.6</version>
+        <version>${frontend-maven-plugin.version}</version>
         <executions>
           <execution>
-            <id>install node and yarn</id>
+            <id>install node and npm</id>
             <phase>process-resources</phase>
             <goals>
-              <goal>install-node-and-yarn</goal>
+              <goal>install-node-and-npm</goal>
             </goals>
           </execution>
           <execution>
-            <id>yarn install</id>
+            <id>npm install</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>npm</goal>
             </goals>
             <configuration>
               <arguments>install</arguments>
@@ -222,12 +232,12 @@
             <phase>process-resources</phase>
           </execution>
           <execution>
-            <id>yarn build</id>
+            <id>npm run build</id>
             <goals>
-              <goal>yarn</goal>
+              <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>build</arguments>
+              <arguments>run build</arguments>
             </configuration>
             <phase>process-resources</phase>
           </execution>
@@ -235,9 +245,8 @@
         <configuration>
           <workingDirectory>src/main/js</workingDirectory>
           <installDirectory>target</installDirectory>
-          <nodeVersion>v8.11.4</nodeVersion>
-          <npmVersion>v6.1.0</npmVersion>
-          <yarnVersion>v1.9.4</yarnVersion>
+          <npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion>
+          <nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
         </configuration>
       </plugin>
     </plugins>
