--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -1,23 +1,19 @@
 version: '2.1'
-
+volumes:
+  app-data: {}
+networks:
+  publicnet:
+    driver: bridge
 services:
-
   app:
-    restart: unless-stopped
     build:
       context: ../../..
       dockerfile: ./src/main/docker/Dockerfile
     volumes: ['app-data:/home/applicatoin']
     ports: ['8080:8080']
     networks:
-      public-net:
+      publicnet:
         aliases:
         - a
         - app
         - appplication
-
-volumes:
-  app-data: {}
-
-networks:
-  public-net:
